--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,4 +146,5 @@ dependencies {
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
     // 重启进程
     implementation 'com.jakewharton:process-phoenix:2.0.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 }
