update open source list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,5 +146,6 @@ dependencies {
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
     // 重启进程
     implementation 'com.jakewharton:process-phoenix:2.0.0'
+    // 移植 java8 java.time 包(要求 APi>26)，使其向后兼容
     implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 }
